@@ -1,0 +1,13 @@
+{
+    "author_name": "Craig Walls", 
+    "author_url": "https://twitter.com/habuma", 
+    "cache_age": "3153600000", 
+    "height": null, 
+    "html": "<blockquote class=\"twitter-tweet\"><p>This does not bode well for those traveling out of DFW today. <a href=\"http://t.co/r1dJT15q3w\">pic.twitter.com/r1dJT15q3w</a></p>&mdash; Craig Walls (@habuma) <a href=\"https://twitter.com/habuma/statuses/357251561744916480\">July 16, 2013</a></blockquote>\n<script async src=\"//platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>", 
+    "provider_name": "Twitter", 
+    "provider_url": "https://twitter.com", 
+    "type": "rich", 
+    "url": "https://twitter.com/habuma/statuses/357251561744916480", 
+    "version": "1.0", 
+    "width": 550
+}
