@@ -10,6 +10,7 @@ Improvements
   * Add ability to specify a place ID when updating status. (SOCIALTW-35)
   * Add favorite_count to Tweet class. (SOCIALTW-60)
   * Add support for fetching Account Settings. (SOCIALTW-47)
+  * Add support for fetching Tweet as an oEmbed object. (SOCIALTW-61)
 
 Bug Fixes
   * Escape star (*) per Twitter's non-standard URL encoding scheme.
